--- a/bcsb_jam_analog.html
+++ b/bcsb_jam_analog.html
@@ -1,4 +1,5 @@
 <body>
+  <link rel="stylesheet" href="https://rawcdn.githack.com/masrahmat-id/javascript/dbf1ba6acf4f2329bc17e0335da12dfcb3d0beb8/bcsb-jam-analog-style.css">
   <div class="outer">
     <div class="inner">
       <div class="center">
@@ -13,5 +14,5 @@
       <div class="segments" id="segments"></div>
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="https://raw.githack.com/masrahmat-id/javascript/57d1e39efcfbb314a81d372371991ccf14fd94e9/bcsb-script-analog.js"></script>
 </body>
