--- a/pure-index.html
+++ b/pure-index.html
@@ -13,5 +13,5 @@
 			<div class="segments" id="segments"></div>	
 		</div>
 	</div>
-	<script src="script.js"></script>
+	<script src="https://raw.githack.com/masrahmat-id/javascript/0181375701afd01105e49865ce9c4d8c48d8c6c8/pure-script.js"></script>
 </body>
