--- a/pure-index.html
+++ b/pure-index.html
@@ -1,5 +1,7 @@
 <body>
-	<div class="outer">
+	<link rel="stylesheet" href="https://raw.githack.com/masrahmat-id/javascript/0181375701afd01105e49865ce9c4d8c48d8c6c8/pure-style.css">
+ 
+<div class="outer">
 		<div class="inner">
 			<div class="center">
 				<div class="hour-hand" id="hour_hand"></div>
