--- a/valentines-landi/index.html
+++ b/valentines-landi/index.html
@@ -134,7 +134,7 @@
             
             // Saat tombol rusak
             if (noClickCount >= 15) {
-                msg.innerText = 'Oh No! You broke the button :c';
+                msg.innerText = 'Oh tidak! Kamu merusak tombolnya.';
                 noBtn.disabled = true;
                 noBtn.style.position = 'static'; 
                 noBtn.style.opacity = '0.5';
