--- a/valentines-landi/index.html
+++ b/valentines-landi/index.html
@@ -163,7 +163,7 @@
                 // PINDAH KE SELURUH LAYAR (Klik 4-14)
                 noWrapper.style.position = 'fixed';
                 msg.style.display = 'block';
-                msg.innerText = 'Kok kabur? 🥺';
+                msg.innerText = 'Dipikir lagi dong...';
 
                 const viewWidth = window.innerWidth;
                 const viewHeight = window.innerHeight;
@@ -182,7 +182,7 @@
             
             // 3. Tombol Rusak (Klik 15)
             if (noClickCount >= 15) {
-                msg.innerText = 'Yah, rusak...';
+                msg.innerText = 'Yahhh, tombolnya rusak...';
                 noBtn.disabled = true;
                 noBtn.classList.add('broken');
                 noWrapper.style.position = 'fixed';
